# miranda-compiler

./: README.md  miranda.cabal  something.m
src/: Main.hs
src/Miranda/: Compile.hs  Core.hs  Parse.hs
