name:                miranda 
version:             0.0.0.0
synopsis:            Miranda Compiler 
build-type:          Simple
cabal-version:       >=1.10

executable main
    hs-source-dirs:     src
    main-is:            Main.hs
    other-modules:      Miranda.Core , Miranda.Parse
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base , unordered-containers >= 0.2 , parsec , mtl,  readline
    default-language:   Haskell2010


